# libpqxx

./: .clang-format  .clang-tidy  .cmake-format  .cvsignore  .gitattributes  .gitignore  .gitmodules  .inferconfig  .lcovrc  .lgtm.yml  .mdl_style.rb  .mdlrc  .readthedocs.yaml  .yamllint  AUTHORS  BUILDING-cmake.md  BUILDING-configure.md  CMakeLists.txt  COPYING  ChangeLog  INSTALL  INSTALL-Windows.md  Makefile.am  Makefile.am.template  Makefile.in  NEWS  README  README-UPGRADE  README.md  README.rst  TODO  UPGRADING.md  VERSION  aclocal.m4  appveyor.yml  autogen.sh  bench.cxx  compile_flags.in  configitems  configure  (+11 more)
doc/: .cvsignore  CMakeLists.txt  CMakeLists.txt.template  Doxyfile  Doxyfile.in  Makefile.am  Makefile.in  conf.py  contents.rst  index.rst  libpqxx.xml  requirements.txt
doc/_static/: readme.txt
doc/html/: README.md
doc/source/: conf.py  index.rst
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  requirements.txt
docs/source/: conf.py  index.rst
include/: CMakeLists.txt  CMakeLists.txt.template  Makefile.am  Makefile.in
include/pqxx/: Makefile.am  Makefile.in  all.h  array  array.hxx  basic_connection  basic_connection.hxx  binarystring  binarystring.hxx  blob  blob.hxx  cachedresult.h  compiler-internal-post.hxx  compiler-internal-pre.hxx  compiler-internal.hxx  compiler-public.hxx  composite  composite.hxx  config-compiler.h  config.h.in  connection  connection.hxx  connection_base  connection_base.h  connection_base.hxx  connectionpolicy  connectionpolicy.hxx  cursor  cursor.h  cursor.hxx  dbtransaction  dbtransaction.hxx  doc.hxx  encoding_group  encoding_group.hxx  errorhandler  errorhandler.hxx  except  except.hxx  field  (+82 more)
libpqxx/: .cvsignore  AUTHORS  CHANGES  COPYING  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  VERSION  autogen.sh  configitems  configure  configure.ac  configure.ac.in  configure.in  libpqxx.pc.in  pg_compiler.h  pg_connection.h  pg_cursor.h  pg_result.h  pg_robusttransaction.cc  pg_robusttransaction.h  pg_tablereader.cc  pg_tablereader.h  pg_tablestream.cc  pg_tablestream.h  pg_tablewriter.cc  pg_tablewriter.h  pg_transaction.cc  pg_transaction.h  pg_transactor.h  pg_trigger.h  pg_util.h  pqxx-config.in  preprelease  test1.cc  (+7 more)
libpqxx/config/: .cvsignore  Makefile.am  Makefile.in  ltmain.sh
libpqxx/debian/: .cvsignore  changelog  control  control.in  copyright  files  libpqxx-dev.dirs  libpqxx-dev.doc-base  libpqxx-dev.doc-base.reference  package.doc-base  rules
libpqxx/doc/: .cvsignore  Doxyfile.in  Makefile.am  Makefile.in  libpqxx.sgml  libpqxx.xml
libpqxx/include/: Makefile.am  Makefile.in  pg_connection.h  pg_tablereader.h  pg_tablestream.h  pg_transaction.h  pg_transactionitf.h  pg_transactor.h
libpqxx/lib/: .cvsignore
libpqxx/src/: .cvsignore  Makefile.am  Makefile.in  binarystring.cxx  cachedresult.cxx  connection.cc  connection.cxx  connection_base.cxx  connectionitf.cxx  cursor.cc  cursor.cxx  dbtransaction.cxx  largeobject.cxx  nontransaction.cxx  oldcursor.cxx  pg_cursor.cc  pg_nontransaction.cc  pg_result.cc  pg_robusttransaction.cc  pg_tablereader.cc  pg_tablewriter.cc  pg_transactionitf.cc  pipeline.cxx  result.cc  result.cxx  robusttransaction.cc  robusttransaction.cxx  tablereader.cc  tablereader.cxx  tablestream.cc  tablestream.cxx  tablewriter.cc  tablewriter.cxx  transaction.cxx  transaction_base.cxx  transactionitf.cc  transactionitf.cxx  util.cxx
libpqxx/test/: .cvsignore  Makefile.am  Makefile.in  test000.cxx  test001.cxx  test002.cxx  test003.cxx  test004.cxx  test005.cxx  test006.cxx  test007.cxx  test008.cxx  test009.cxx  test010.cxx  test011.cxx  test012.cxx  test013.cxx  test014.cxx  test015.cxx  test016.cxx  test017.cxx  test018.cxx  test019.cxx  test020.cxx  test021.cxx  test022.cxx  test023.cxx  test024.cxx  test025.cxx  test026.cxx  test027.cxx  test028.cxx  test029.cxx  test030.cxx  test031.cxx  test032.cxx  test033.cxx  test034.cxx  test035.cxx  test037.cxx  (+96 more)
libpqxx/tools/: Makefile.am  makemingwmak.pl  maketestam.pl  maketestvcmak.pl  makevcmake.pl  preprelease  rmlo.cxx
libpqxx/win32/: INSTALL.txt  Makefile.am  common  config.h  libpqxx.cxx  libpqxx.mak  test.mak
src/: CMakeLists.txt  CMakeLists.txt.template  Makefile.am  Makefile.in  array.cxx  binarystring.cxx  blob.cxx  cachedresult.cxx  connection.cxx  connection_base.cxx  cursor.cxx  dbtransaction.cxx  encodings.cxx  errorhandler.cxx  except.cxx  exports.cxx  field.cxx  largeobject.cxx  nontransaction.cxx  notification.cxx  notify-listen.cxx  oldcursor.cxx  params.cxx  pipeline.cxx  pqxx-source.hxx  pqxx_json.cpp  prepared_statement.cxx  result.cxx  robusttransaction.cxx  row.cxx  sql_cursor.cxx  statement_parameters.cxx  strconv.cxx  stream_base.cxx  stream_from.cxx  stream_to.cxx  subtransaction.cxx  tablereader.cxx  tablereader2.cxx  tablestream.cxx  (+10 more)
src/internal/: encodings.cxx
test/unit/: .cvsignore  CMakeLists.txt  CMakeLists.txt.template  Makefile.am  Makefile.am.template  Makefile.in  runner.cxx  test_array.cxx  test_binarystring.cxx  test_blob.cxx  test_cancel_query.cxx  test_column.cxx  test_composite.cxx  test_connection.cxx  test_cursor.cxx  test_encodings.cxx  test_error_verbosity.cxx  test_errorhandler.cxx  test_escape.cxx  test_exceptions.cxx  test_field.cxx  test_float.cxx  test_inactive_connection.cxx  test_largeobject.cxx  test_nonblocking_connect.cxx  test_notice_handler.cxx  test_notification.cxx  test_pipeline.cxx  (+32 more)
tools/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  benchmark.cxx  check_ascii.py  compiler_flags.py  count-uncovered.sh  deprecations  deprecations.sh  extract_version  extract_version.py  extract_version.sh  filter-config.sh  filter_config.py  format  format.sh  generate_check_config.py  generate_checks.py  generate_cxx_checks.py  idock.sh  install-deps.sh  lint  lint.sh  m4esc.py  makemingwmak.pl  maketestvcmak.pl  makevcmake.pl  pqxx-fulltest  pqxxthreadsafety.cxx  pre-release-check  preprelease  release  rmlo.cxx  run-test-postgres.sh  sign-tarball  splitconfig  splitconfig.py  template2mak.py  test_all.py  (+4 more)
(+1629 files in other folders)
